--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,14 @@
 ; dist.ini
 name    = Project2-Gantt
-author  = Bruno Ramos <brunoramos.lu@gmail.com>
+author  = Bruno Ramos <bramos@cpan.com>
 license = Perl_5
 copyright_holder = Bruno Ramos
 copyright_year   = 2023
-version = 0.001
 
-[@Starter::Git]      ; all that is needed to start
-revision = 5         ; always defaults to revision 3
+[@Starter::Git]
+revision = 5
+Git::GatherDir.exclude_filename = README.md
+managed_versions = 1
+
+[OurDate]
+[Repository]
